--- a/Minesweeper.Uno/Minesweeper.Uno.Shared/Views/HelpPage.xaml
+++ b/Minesweeper.Uno/Minesweeper.Uno.Shared/Views/HelpPage.xaml
@@ -7,14 +7,14 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Pivot SelectedIndex="0">
+    <Pivot SelectedIndex="0" Height="350">
         <PivotItem Header="Objectif">
             <TextBlock>
                 The object of Minesweeper is to find all the mines as quickly as possible without uncovering any of them.
             </TextBlock>
         </PivotItem>
         <PivotItem Header="How To Play?">
-            <TextBlock xml:space="preserve">
+            <TextBlock xml:space="preserve" TextWrapping="Wrap">
 To play Minesweeper 
     1. On the Game menu, click New. 
     2.To start the timer, click any square on the playing field. 
@@ -27,7 +27,7 @@ that surround the numbered one.
             </TextBlock>
         </PivotItem>        
         <PivotItem Header="Tips">
-            <TextBlock xml:space="preserve">
+            <TextBlock xml:space="preserve" TextWrapping="Wrap">
 -If you are uncertain about a square, right-click it twice to mark it with a question mark (?). 
 Later, you can either mark the square as a mine or uncover it by right-clicking again once or twice. 
 
